managed FixedHeader width on context bar visibility

--- a/src/app/components/template/components/FixedHeader.scss
+++ b/src/app/components/template/components/FixedHeader.scss
@@ -2,5 +2,6 @@
     position: fixed;
     padding: 2em 4em 1em 4em;
     margin: -2em -4em 0 -4em;
-    background: #fff;
+    background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 85%,rgba(255,255,255,0) 100%);
+    transition: width .25s ease-in-out;
 }
